<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <android.support.v7.widget.CardView
                android:id="@+id/det_cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="描述"
                        android:textColor="#333"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/matrix_define_des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_det_des1"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/det_cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="定义"
                        android:textColor="#333"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/matrix_define_def1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_det_define1"
                        android:textSize="14sp" />
                    <ImageView
                        android:id="@+id/det_img"
                        android:layout_width="300dp"
                        android:layout_height="100dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/det"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="其中"
                            android:textSize="14sp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@mipmap/det1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/matrix_det_define2"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/det_cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="性质"
                        android:textColor="#333"
                        android:textSize="18sp" />
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:layout_margin="8dp"
                        app:cardElevation="5dp">

                        <TextView
                            android:id="@+id/matrix_det_nature1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/matrix_det_nature1"
                            android:padding="5dp"
                            android:textSize="14sp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:layout_margin="8dp"
                        app:cardElevation="5dp">
                        <TextView
                            android:id="@+id/matrix_det_nature2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/matrix_det_nature2"
                            android:padding="5dp"
                            android:textSize="14sp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:layout_margin="8dp"
                        app:cardElevation="5dp">
                        <TextView
                            android:id="@+id/matrix_det_nature3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/matrix_det_nature3"
                            android:padding="5dp"
                            android:textSize="14sp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        app:cardElevation="5dp">
                        <TextView
                            android:id="@+id/matrix_det_nature4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/matrix_det_nature4"
                            android:padding="5dp"
                            android:textSize="14sp" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>