<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp"
            android:background="@color/setting_bg">

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="描述"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/matrix_operation_des1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_operation_des"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="加法"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/matrix_operation_des2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_operation_add1"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>

                    <ImageView
                        android:id="@+id/add_img"
                        android:layout_width="240dp"
                        android:layout_height="60dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/add"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="减法"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/sub_img"
                        android:layout_width="240dp"
                        android:layout_height="52dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/sub" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="数乘"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/num_mul_img"
                        android:layout_width="240dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/mul" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_mul"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>

                    <ImageView
                        android:id="@+id/mul_other_img"
                        android:layout_width="200dp"
                        android:layout_height="75dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/mul_other" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_mul2"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="转置"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_transpose"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>

                    <ImageView
                        android:id="@+id/trans_img"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/trans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_transpose1"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                    <ImageView
                        android:id="@+id/trans_other_img"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/trans_other" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="共轭"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_conjugate"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>

                    <ImageView
                        android:id="@+id/e_img1"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/e" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_conjugate2"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                    <ImageView
                        android:id="@+id/e_img2"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/et3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="则"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                    <ImageView
                        android:id="@+id/e_img3"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/e3" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/matrix_operation_cardview7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#fff"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/basic_layout_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@drawable/ripple_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="共轭转置"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_conjugate_trans1"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>

                    <ImageView
                        android:id="@+id/et_img1"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/et1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_conjugate_trans2"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                    <ImageView
                        android:id="@+id/et_img2"
                        android:layout_width="150dp"
                        android:layout_height="43dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/et2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_conjugate_trans3"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                    <ImageView
                        android:id="@+id/et_img3"
                        android:layout_width="200dp"
                        android:layout_height="77dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/et3" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_conjugate_trans4"
                        android:textSize="14sp"
                        android:textColor="@color/textcolor"/>
                    <ImageView
                        android:id="@+id/et_img4"
                        android:layout_width="200dp"
                        android:layout_height="74dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/et4" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>